# cookiecutter-python-app

./: .pre-commit-config.yaml  README.md
{{cookiecutter.app_name}}/: .dockerignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pytest.ini  requirements.txt  setup.cfg  setup.py  tox.ini
{{cookiecutter.app_name}}/app/: __init__.py  __main__.py  exit.py  settings.toml
{{cookiecutter.app_name}}/docker/: docker-compose.yml
{{cookiecutter.app_name}}/docs/sphinx/: conf.py
