[aliases]
test=pytest

[metadata]
description-file = README.md

[flake8]
max-line-length = 88
exclude = .git,.hg,.svn,test,setup.py,__pycache__
ignore = B006,W503,E203

[isort]
line_length=88
known_future_library=future,pies
known_standard_library=std,std2
known_third_party=
known_first_party=app
indent='    '
include_trailing_comma=True
multi_line_output=3
length_sort=1
default_section=FIRSTPARTY
no_lines_before=LOCALFOLDER
sections=FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER

### Coverage settings (equivalent to .coveragerc)
[coverage:run]
# Only run coverage on our source code not on 3rd party libs
source = .
omit = .tox/*
       setup.py
       **conftest.py
branch = True
concurrency = multiprocessing
parallel = True
data_file = tests/results/coverage

[coverage:report]
# Fail if coverage is <70%
fail_under=70
